# KugouMusic.NET

./: .gitignore  Directory.Packages.props  KugouMusic.NET.slnx  README.md
.github/ISSUE_TEMPLATE/: 错误报告模板.md
.github/workflows/: dotnet-desktop.yml  macos-install-test.yml  macos-smoke.yml  nativeaot-ci.yml  release.yml
ConsoleApp1/: ConsoleApp1.csproj  Program.cs
KgTest/: KgTest.csproj  Program.cs  TerminalApp.cs
KgTest/Services/: TerminalPlaybackService.cs
KgWebApi.Net/: KgWebApi.Net.http  Program.cs
KgWebApi.Net/Controllers/: AlbumController.cs  ArtistController.cs  CaptchaController.cs  DiscoveryController.cs  FmController.cs  LoginController.cs  LyricController.cs  MediaCatalogController.cs  PlayListController.cs  RankController.cs  RegisterController.cs  ReportController.cs  SearchController.cs  (+3 more)
KuGou.Audio/: KuGou.Audio.csproj  SimpleAudioPlayer.cs
KuGou.Net/: KuGou.Net.csproj  combined.txt
KuGou.Net.Native/: KuGou.Net.Native.csproj  NativeExports.cs  NativeJsonContext.cs
KugouAvaloniaPlayer/: App.TrayIcon.cs  App.axaml  App.axaml.cs  KugouAvaloniaPlayer.csproj  Program.cs  ViewLocator.cs
SimpleAudio/: ClientAudioPlayer.cs  DualTrackAudioPlayer.cs  SimpleAudio.csproj  SimpleAudioPlayer.cs
TestMusic/: App.axaml  App.axaml.cs  Program.cs  TestMusic.csproj  ViewLocator.cs  app.manifest
local-nuget/: SukiUI.6.0.4-pr598.nupkg
src/Native/KugouTaskbarNative/: Cargo.toml  README.md  kugou_taskbar_toolbar.c
src/Native/KugouTaskbarNative/src/: lib.rs
src/Native/KugouWinRtNative/: Cargo.toml  README.md
src/Native/KugouWinRtNative/src/: lib.rs
(+484 files in other folders)
