[package]
name = "kugou-taskbar-native"
version = "0.1.0"
edition = "2024"

[lib]
name = "KugouTaskbarNative"
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
